--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 absl-py==1.0.0
 aiohttp==3.8.1
 aiosignal==1.2.0
+anyio==3.5.0
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 asttokens==2.0.5
 async-timeout==4.0.2
 attrs==21.4.0
+Babel==2.10.1
 backcall==0.2.0
 beautifulsoup4==4.11.1
 bleach==5.0.0
@@ -17,7 +19,7 @@ charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.4
 cycler==0.11.0
-datasets==2.1.0
+datasets==2.2.0
 debugpy==1.6.0
 decorator==5.1.1
 defusedxml==0.7.1
@@ -42,10 +44,14 @@ ipywidgets==7.7.0
 jedi==0.18.1
 Jinja2==3.1.2
 joblib==1.1.0
+json5==0.9.8
 jsonschema==4.5.1
 jupyter-client==7.3.1
 jupyter-core==4.10.0
+jupyter-server==1.17.0
+jupyterlab==3.4.0
 jupyterlab-pygments==0.2.2
+jupyterlab-server==2.13.0
 jupyterlab-widgets==1.1.0
 kiwisolver==1.4.2
 Markdown==3.3.7
@@ -55,11 +61,13 @@ matplotlib-inline==0.1.3
 mistune==0.8.4
 multidict==6.0.2
 multiprocess==0.70.12.2
+nbclassic==0.3.7
 nbclient==0.6.2
 nbconvert==6.5.0
 nbformat==5.4.0
 nest-asyncio==1.5.5
 notebook==6.4.11
+notebook-shim==0.1.0
 numpy==1.22.3
 oauthlib==3.2.0
 packaging==21.3
@@ -101,6 +109,7 @@ scipy==1.8.0
 Send2Trash==1.8.0
 six==1.16.0
 sklearn==0.0
+sniffio==1.2.0
 soupsieve==2.3.2.post1
 stack-data==0.2.0
 tensorboard==2.9.0
@@ -128,9 +137,11 @@ typing_extensions==4.2.0
 urllib3==1.26.9
 wcwidth==0.2.5
 webencodings==0.5.1
+websocket-client==1.3.2
 Werkzeug==2.1.2
 widgetsnbextension==3.6.0
 wincertstore==0.2
 xxhash==3.0.0
 yarl==1.7.2
 zipp==3.8.0
+zstandard==0.17.0
