--- a/requirements.txt
+++ b/requirements.txt
@@ -94,8 +94,8 @@ pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytorch-lightning==1.6.3
 pytz==2022.1
-pywin32==304
-pywinpty==2.0.5
+pywin32==304 ; platform_system == "Windows"
+pywinpty==2.0.5 ; platform_system == "Windows"
 PyYAML==6.0
 pyzmq==22.3.0
 regex==2022.4.24
@@ -121,7 +121,7 @@ tinycss2==1.1.1
 tokenizers==0.12.1
 tomlkit==0.10.2
 torch==1.11.0
-torchaudio==0.11.0+cu113
+torchaudio==0.11.0
 torchcde==0.2.5
 torchdiffeq==0.2.3
 torchdyn==1.0.1
