--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,73 @@
-absl-py==1.0.0
+absl-py==1.1.0
 aiohttp==3.8.1
 aiosignal==1.2.0
-anyio==3.5.0
+anyio==3.6.1
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 asttokens==2.0.5
 async-timeout==4.0.2
 attrs==21.4.0
-Babel==2.10.1
+Babel==2.10.2
 backcall==0.2.0
 beautifulsoup4==4.11.1
 bleach==5.0.0
 boltons==21.0.0
-cachetools==5.0.0
-certifi==2021.10.8
+cachetools==5.2.0
+certifi==2022.5.18.1
 cffi==1.15.0
 charset-normalizer==2.0.12
-click==8.1.3
 colorama==0.4.4
 cycler==0.11.0
-datasets==2.2.0
+datasets==2.3.0
 debugpy==1.6.0
 decorator==5.1.1
 defusedxml==0.7.1
-dill==0.3.4
+dill==0.3.5.1
 entrypoints==0.4
 executing==0.8.3
 fastjsonschema==2.15.3
-filelock==3.6.0
+filelock==3.7.1
 fonttools==4.33.3
 frozenlist==1.3.0
-fsspec==2022.3.0
-google-auth==2.6.6
+fsspec==2022.5.0
+google-auth==2.8.0
 google-auth-oauthlib==0.4.6
-grpcio==1.46.0
-huggingface-hub==0.5.1
+grpcio==1.46.3
+huggingface-hub==0.7.0
 idna==3.3
-importlib-metadata==4.11.3
-ipykernel==6.13.0
-ipython==8.3.0
+importlib-metadata==4.11.4
+ipykernel==6.14.0
+ipython==8.4.0
 ipython-genutils==0.2.0
 ipywidgets==7.7.0
 jedi==0.18.1
 Jinja2==3.1.2
 joblib==1.1.0
 json5==0.9.8
-jsonschema==4.5.1
-jupyter-client==7.3.1
+jsonschema==4.6.0
+jupyter-client==7.3.4
 jupyter-core==4.10.0
-jupyter-server==1.17.0
-jupyterlab==3.4.0
+jupyter-server==1.17.1
+jupyterlab==3.4.3
 jupyterlab-pygments==0.2.2
-jupyterlab-server==2.13.0
+jupyterlab-server==2.14.0
 jupyterlab-widgets==1.1.0
-kiwisolver==1.4.2
+kiwisolver==1.4.3
 Markdown==3.3.7
 MarkupSafe==2.1.1
 matplotlib==3.5.2
 matplotlib-inline==0.1.3
 mistune==0.8.4
 multidict==6.0.2
-multiprocess==0.70.12.2
+multiprocess==0.70.13
 nbclassic==0.3.7
-nbclient==0.6.2
+nbclient==0.6.4
 nbconvert==6.5.0
 nbformat==5.4.0
 nest-asyncio==1.5.5
-notebook==6.4.11
+notebook==6.4.12
 notebook-shim==0.1.0
-numpy==1.22.3
+numpy==1.22.4
 oauthlib==3.2.0
 packaging==21.3
 pandas==1.4.2
@@ -76,12 +75,13 @@ pandocfilters==1.5.0
 parso==0.8.3
 pastel==0.2.1
 pickleshare==0.7.5
-Pillow==9.1.0
+Pillow==9.1.1
+pip==21.2.4
 poethepoet==0.10.0
 prometheus-client==0.14.1
 prompt-toolkit==3.0.29
-protobuf==3.20.1
-psutil==5.9.0
+protobuf==3.19.4
+psutil==5.9.1
 pure-eval==0.2.2
 pyarrow==8.0.0
 pyasn1==0.4.8
@@ -89,59 +89,59 @@ pyasn1-modules==0.2.8
 pycparser==2.21
 pyDeprecate==0.3.2
 Pygments==2.12.0
-pyparsing==3.0.8
+pyparsing==3.0.9
 pyrsistent==0.18.1
 python-dateutil==2.8.2
-pytorch-lightning==1.6.3
+pytorch-lightning==1.6.4
 pytz==2022.1
-pywin32==304 ; platform_system == "Windows"
-pywinpty==2.0.5 ; platform_system == "Windows"
+pywin32==304
+pywinpty==2.0.5
 PyYAML==6.0
-pyzmq==22.3.0
-regex==2022.4.24
-requests==2.27.1
+pyzmq==23.1.0
+regex==2022.6.2
+requests==2.28.0
 requests-oauthlib==1.3.1
 responses==0.18.0
 rsa==4.8
-sacremoses==0.0.53
-scikit-learn==1.0.2
-scipy==1.8.0
+scikit-learn==1.1.1
+scipy==1.8.1
 Send2Trash==1.8.0
+setuptools==61.2.0
 six==1.16.0
 sklearn==0.0
 sniffio==1.2.0
 soupsieve==2.3.2.post1
 stack-data==0.2.0
-tensorboard==2.9.0
+tensorboard==2.9.1
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-terminado==0.13.3
+terminado==0.15.0
 threadpoolctl==3.1.0
 tinycss2==1.1.1
 tokenizers==0.12.1
-tomlkit==0.10.2
-torch==1.11.0
-torchaudio==0.11.0
+tomlkit==0.11.0
+torch==1.11.0+cu113
+torchaudio==0.11.0+cu113
 torchcde==0.2.5
 torchdiffeq==0.2.3
 torchdyn==1.0.1
-torchmetrics==0.8.2
+torchmetrics==0.9.1
 torchsde==0.2.5
-torchvision==0.12.0
+torchvision==0.12.0+cu113
 tornado==6.1
 tqdm==4.64.0
-traitlets==5.1.1
+traitlets==5.2.2.post1
 trampoline==0.1.2
-transformers==4.18.0
+transformers==4.19.4
 typing_extensions==4.2.0
 urllib3==1.26.9
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.3.2
 Werkzeug==2.1.2
+wheel==0.37.1
 widgetsnbextension==3.6.0
 wincertstore==0.2
 xxhash==3.0.0
 yarl==1.7.2
 zipp==3.8.0
-zstandard==0.17.0
