--- a/requirements.txt
+++ b/requirements.txt
@@ -120,11 +120,14 @@ threadpoolctl==3.1.0
 tinycss2==1.1.1
 tokenizers==0.12.1
 tomlkit==0.11.0
+torch==1.12.0+cu113
+torchaudio==0.12.0+cu113
 torchcde==0.2.5
 torchdiffeq==0.2.3
 torchdyn==1.0.1
 torchmetrics==0.9.1
 torchsde==0.2.5
+torchvision==0.13.0+cu113
 tornado==6.1
 tqdm==4.64.0
 traitlets==5.2.2.post1
