--- a/config-defaults.yaml
+++ b/config-defaults.yaml
@@ -8,7 +8,7 @@
         value: './models/lucas-cont/'
 
     load_checkpoint:
-        description: load the model from this checkpoint
+        description: load the model from this checkpoint (use null if no checkpoint)
         value: './models/lucas/checkpoint-60000'
 
     resume_steps:
